# tabGPT

./: .gitignore  README.md  bookmark_utils.py  classify_tabs.py  classify_tabs_.py  gpt4_script.py  makefile  preprocess_urls.py  process_tabs.py  pyproject.toml  requirements.txt
test_data/: bookmarks.html  demo_prompt.txt  prompt.yml  prompt_long.yml
